# Nice-projects

./: Programul care verifica daca un input dat ii numar.cpp  RaceConditionSimulation.rar  Spanzuratoarea.cpp  connect 4 first AI prototype.py
AnimeList/: DACA NU AI NODE MODULES.txt  README.md  angular.json  db.json  package-lock.json  package.json
Biblioteca/: CMakeLists.txt
Biblioteca/Proiect Bibloteca/Proiectu Bibloteca/: Proiectu_Bibloteca.sln
Biblioteca/Proiect Bibloteca/Proiectu Bibloteca/Proiectu_Bibloteca/: AccountDataBase.txt  AccountDatabase.cpp  AccountDatabase.h  AccountDeletedSuccessfully.cpp  AccountDeletedSuccessfully.h  Admin.cpp  Admin.h  AvailableBooksScene.cpp  AvailableBooksScene.h  Book.cpp  Book.h  BookContent.cpp  BookContent.h  BookSection.cpp  BookSection.h  BorrowedBookSection.cpp  BorrowedBookSection.h  BorrowedBooks.cpp  BorrowedBooks.h  BorrowedSuccesfully.cpp  BorrowedSuccesfully.h  BurrowedTime.txt  Button.cpp  Button.h  Client.cpp  Client.h  Error.cpp  Error.h  ErrorBorrowingBook.cpp  ErrorBorrowingBook.h  InputBox.cpp  InputBox.h  InputOutputServer.h  LoginForm.cpp  LoginForm.h  MainWindow.cpp  MainWindow.h  Proiectu_Bibloteca.cpp  Proiectu_Bibloteca.vcxproj  Proiectu_Bibloteca.vcxproj.filters  (+13 more)
Biblioteca/Proiect Bibloteca/Proiectu Bibloteca/Server2/: AccountDatabase.cpp  AccountDatabase.h  Admin.cpp  Admin.h  Book.cpp  Book.h  Main.cpp  Server.cpp  Server.h  Server2.vcxproj  Server2.vcxproj.filters  UserAccount.cpp  UserAccount.h
Connect 4 modified/: main.py
GeneticAlgorithm1/: Main.py
Hangman/: Tema2.sln
(+111 files in other folders)
